<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.moshin.eljt2.EftPaymentInquiry"
    android:orientation="vertical"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eftPaymentEnquiry"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textColor="#fff"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:layout_gravity="center"
        android:background="#5b8140"
        android:id="@+id/textView" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="19dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="15dp">


        <TextView
            android:text="@string/eftno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEft"
            android:layout_marginRight="10dp"
            android:textSize="17dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:id="@+id/editTextEftNo"
            android:background="@drawable/textview_border"
            android:textColor="#000000"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnSearchEft"
            android:background="#5498da"
            android:textColor="#fff"
            android:layout_margin="10dp"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:id="@+id/listefthide">

            <ListView
                android:id="@+id/listviewEFT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null">
            </ListView>

            <Button
                android:text="@string/downloadV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/BtnDownVou"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#5498da"
                android:textStyle="bold"
                android:textSize="12dp"
                android:textColor="#fff"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
