<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.moshin.eljt2.MenuActivity"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:transformPivotX="@dimen/activity_horizontal_margin"
                android:foregroundTint="@color/colorPrimaryDark"
                android:foregroundGravity="center"
                android:background= "@drawable/border_shadow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:text="@string/eftPaymentEnquiry"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:shadowColor="#5b8140"
                        android:background="#5b8140"
                        android:textColor="#fff"
                        android:id="@+id/buttonEFT"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20dp"
                        android:textStyle="bold"/>

                    <Button
                        android:text="@string/printreceiptLS"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:shadowColor="#5b8140"
                        android:background="#5b8140"
                        android:textColor="#fff"
                        android:id="@+id/buttonLS"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="20dp"
                        android:textStyle="bold"/>

                    <Button
                        android:text="@string/searchEftCheck"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:shadowColor="#5b8140"
                        android:background="#5b8140"
                        android:textColor="#fff"
                        android:id="@+id/buttonSearchEFT"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="20dp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
